// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`debt split with hero strat: Diff 1`] = `
{
  "A": "0.00",
  "A2": "0.00",
  "E": "0.00",
  "I": "0.00",
  "J": "0.00",
  "J2": "0.00",
  "L": "0.00",
  "L2": "0.00",
}
`;

exports[`debt split with hero strat: Givers 1`] = `
{
  "A": "-3.42",
  "A2": "-10.07",
  "I": "-70.04",
  "L": "-22.83",
}
`;

exports[`debt split with hero strat: Graph 1`] = `
{
  "A": {
    "A": "8.58",
    "A2": "6.16",
    "E": "6.79",
    "I": "0.00",
    "J": "12.95",
    "J2": "0.00",
    "L": "3.40",
    "L2": "12.20",
  },
  "A2": {
    "A": "3.08",
    "A2": "6.66",
    "E": "6.79",
    "I": "0.00",
    "J": "12.95",
    "J2": "24.96",
    "L": "3.40",
    "L2": "12.20",
  },
  "E": {
    "A": "8.58",
    "A2": "6.16",
    "E": "6.79",
    "I": "0.00",
    "J": "15.50",
    "J2": "0.00",
    "L": "3.40",
    "L2": "14.39",
  },
  "I": {
    "A": "3.08",
    "A2": "6.66",
    "E": "6.79",
    "I": "0.00",
    "J": "12.95",
    "J2": "24.96",
    "L": "3.40",
    "L2": "12.20",
  },
  "J": {
    "A": "3.10",
    "A2": "15.35",
    "E": "6.86",
    "I": "0.00",
    "J": "12.98",
    "J2": "25.98",
    "L": "3.45",
    "L2": "21.16",
  },
  "J2": {
    "A": "3.08",
    "A2": "6.66",
    "E": "6.79",
    "I": "0.00",
    "J": "12.95",
    "J2": "25.96",
    "L": "3.40",
    "L2": "12.20",
  },
  "L": {
    "A": "8.58",
    "A2": "6.16",
    "E": "6.79",
    "I": "0.00",
    "J": "12.95",
    "J2": "0.00",
    "L": "3.40",
    "L2": "12.20",
  },
  "L2": {
    "A": "8.58",
    "A2": "6.16",
    "E": "18.29",
    "I": "0.00",
    "J": "12.95",
    "J2": "0.00",
    "L": "3.40",
    "L2": "12.20",
  },
}
`;

exports[`debt split with hero strat: Net 1`] = `
{
  "A": "-3.42",
  "A2": "-10.07",
  "E": "11.07",
  "I": "-70.04",
  "J": "17.30",
  "J2": "30.82",
  "L": "-22.83",
  "L2": "47.17",
}
`;

exports[`debt split with hero strat: Original Total Cost 1`] = `"516.56"`;

exports[`debt split with hero strat: Receivers 1`] = `
{
  "E": "11.07",
  "J": "17.30",
  "J2": "30.82",
  "L2": "47.17",
}
`;

exports[`debt split with hero strat: Transactions 1`] = `
{
  "A": {
    "E": "1.00",
    "J": "0.00",
    "J2": "2.42",
    "L2": "0.00",
  },
  "A2": {
    "E": "10.07",
    "J": "0.00",
    "J2": "0.00",
    "L2": "0.00",
  },
  "I": {
    "E": "0.00",
    "J": "0.00",
    "J2": "22.87",
    "L2": "47.17",
  },
  "L": {
    "E": "0.00",
    "J": "17.30",
    "J2": "5.53",
    "L2": "0.00",
  },
}
`;
